# kaitai_struct_awkward_runtime

./: # Fix Documentation for kaitai-awkward.md  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  CMakeLists.txt  Makefile  README.md  awkward_kaitai.code-workspace  copier.yml  debug_soudan.sh  index.html  kaitai-print-layout.py  kaitai-struct-compiler  mkdocs.yml  module-name.jinja  noxfile.py  pyproject.toml  sitemap.xml  test-pixie4e.cpp
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  python-package.yml
awkward_kaitai/: awkward_kaitai.py
configure/: __init__.py.in
data/: StilbeneAmCs_500_0253.mca  records.raw
debug/: index.html
development/: index.html
docs/: conf.py  debug.md  development.md  index.ipynb  index.md  reimplementation-plan-0.11.md  release.md
example_data/data/: index_option.raw  lists.raw  minimal_sample.soudan  numpy.raw  scdms_v8.mid
example_data/schemas/: fake.ksy  hello_world.ksy  index_option.ksy  lists.ksy  numpy.ksy  pixie4e.ksy  records.ksy  scdms.ksy  scdms_no_enums_v8.ksy  scdms_v8.ksy  scdms_v_two_trigger.ksy  simple_enum.ksy  soudan.ksy  union.ksy
reimplementation-plan-0.11/: index.html
release/: index.html
schemas/: records.ksy
search/: search_index.json
src/: awkward_kaitai.py  main.cpp
src-ParametricParser/: kv_pairs.cpp  kv_pairs.h
src-animal/: animal.cpp  animal.h
src-animal_colony/: colony.cpp  colony.h
src-fake/: fake.cpp  fake.h
src-fake-test/: GrowableBuffer.h  LayoutBuilder.h  fake.cpp  fake.h  fake.py
src-fake-test/kaitai/: exceptions.h  kaitaistream.cpp
src-hello_world/: hello_world.cpp  hello_world.h
src-index_option/: index_option.cpp  index_option.h
src-lists/: lists.cpp  lists.h
src-midas/: scdms.cpp  scdms.h
src-numpy/: numpy.cpp  numpy.h
src-parametric/: kv_pairs.cpp  kv_pairs.h
src-pixie4e/: pixie4e.cpp  pixie4e.h  pixie4e.py
src-records/: records.cpp  records.h
src-scdms_no_enums_v8/: test.cpp  test.h
src-scdms_soudan/: soudan.cpp  soudan.h
src-scdms_v8/: test.cpp  test.h
src-scdms_v_two_trigger/: scdms.cpp  scdms.h
src-union/: union.cpp  union.h
src-wave_parser/: wave_data.cpp  wave_data.h
src/awkward_kaitai/: __init__.py  builder.py  reader.py
src/awkward_kaitai/data/: CMakeLists.txt  kaitai_struct_cpp_stl_runtime-CMakeLists.txt
src/kaitai_awkward/: __init__.py  builder.py  reader.py
src/kaitai_awkward/data/: CMakeLists.txt
src/kaitai_awkward_runtime/: __init__.py
tests/: __init__.py  debug_tests.cpp  test_animal.py  test_compiled.py  test_fake.py  test_hello_world.py  test_index_option.py  test_numpy.py  test_pixie4e.py  test_records.py  test_scdms.py  test_scdms_v8.py  test_simple_enum.py  test_soudan_awkward_spec.py  utils.py
tests/data/: scdms_soudan_spec.py
wave_test/: test.py
{{project_name}}/: CMakeLists.txt  LICENSE  README.md.jinja  copier.yml  noxfile.py  noxfile.py.jinja  pyproject.toml  pyproject.toml.jinja  test-animal.cpp  test-fake.cpp  test-lists.cpp  test-numpy.cpp  test-records.cpp
{{project_name}}/data/: StilbeneAmCs_500_0253.set  fake.raw
{{project_name}}/docs/: index.md
{{project_name}}/schemas/: fake.ksy  lists.ksy  numpy.ksy  pixie4e.ksy  scdms.ksy
{{project_name}}/src/{% include 'module-name.jinja' %}/: __init__.py.jinja
{{project_name}}/src/{{ module_name }}/: __init__.py.jinja
{{project_name}}/tests/: test_package.py  test_package.py.jinja
